More work today

--- a/case-studies.tex
+++ b/case-studies.tex
@@ -65,6 +65,8 @@ While FLEx is open source, none of the linguists edit the code for it or use the
 
 ODIN has exactly one IGT entry for Naskapi, from \citep{richards2004syntax}.
 
+The Naskapi community website, run by the Naskapi Nation of Kawawachikamach, has a webpage on installing Naskapi syllabics.\footnote{\href{http://www.naskapi.ca/en/Install-syllabics}{http://www.naskapi.ca/en/Install-syllabics}}
+
 % TODO Add in Kornai's notes about Cree in kornai2013digital here
 % TODO Add jancewicz2002applied and look at all papers which cite it
 % TODO Mention http://www.language-archives.org/language/nsk
