--- a/references.bib
+++ b/references.bib
@@ -17,6 +17,64 @@
   year={2004},
   publisher={The University of Chicago Press}
 }
+@article{cenerini2017mapping,
+  title={Mapping Dialectal Variation Using the Algonquian Linguistic Atlas},
+  author={Cenerini, Chantale and Junker, Marie-Odile and Rosen, Nicole},
+  year={2017},
+  publisher={University of Hawaii Press}
+}
+
+@article{hu2018web,
+  title={Web-based Multimedia Mapping for Spatial Analysis and Visualization in the Digital Humanities: a Case Study of Language Documentation in Nepal},
+  author={Hu, Shunfu and Karna, Brajesh and Hildebrandt, Kristine},
+  journal={Journal of Geovisualization and Spatial Analysis},
+  volume={2},
+  number={1},
+  pages={3},
+  year={2018},
+  publisher={Springer}
+}
+
+@article{gawne2016mapmaking,
+  title={Mapmaking for language documentation and description},
+  author={Gawne, Lauren and Ring, Hiram},
+  journal={Language Documentation \& Conservation},
+  volume={10},
+  pages={188--242},
+  year={2016}
+}
+
+
+@article{kaufman2018kratylos,
+  title={Kratylos: A tool for sharing interlinearized and lexical data in diverse formats},
+  author={Kaufman, Daniel and Finkel, Raphael},
+  year={2018},
+  publisher={University of Hawaii Press}
+}
+
+
+@article{o2010ethical,
+  title={Ethical issues in legacy language resources},
+  author={O’Meara, Carolyn and Good, Jeff},
+  journal={Language \& Communication},
+  volume={30},
+  number={3},
+  pages={162--170},
+  year={2010},
+  publisher={Elsevier}
+}
+
+
+@article{cushman2013wampum,
+  title={Wampum, Sequoyan, and story: decolonizing the digital archive},
+  author={Cushman, Ellen},
+  journal={College English},
+  volume={76},
+  number={2},
+  pages={115--135},
+  year={2013},
+  publisher={JSTOR}
+}
 
 
 @inproceedings{scannell2007crubadan,
