--- a/references.bib
+++ b/references.bib
@@ -21,8 +21,42 @@
   title={Mapping Dialectal Variation Using the Algonquian Linguistic Atlas},
   author={Cenerini, Chantale and Junker, Marie-Odile and Rosen, Nicole},
   year={2017},
+  journal={Language Documentation \& Conservation},
+  volume={11},
+  pages={305–324},
   publisher={University of Hawaii Press}
 }
+
+@inproceedings{junker2011linguistic,
+  title={A linguistic atlas for endangered languages: www. atlas-ling. ca},
+  author={Junker, Marie-Odile and Stewart, Terry},
+  booktitle={Proceedings of EDULEARN 11: International Conference on Education and New Learning Technologies},
+  pages={4--6},
+  year={2011}
+}
+
+
+@article{ihaka1996r,
+  title={R: a language for data analysis and graphics},
+  author={Ihaka, Ross and Gentleman, Robert},
+  journal={Journal of computational and graphical statistics},
+  volume={5},
+  number={3},
+  pages={299--314},
+  year={1996},
+  publisher={Taylor \& Francis}
+}
+
+
+@incollection{hu2012multimedia,
+  title={Multimedia mapping on the Internet using commercial APIs},
+  author={Hu, Shunfu},
+  booktitle={Online Maps with APIs and WebServices},
+  pages={61--71},
+  year={2012},
+  publisher={Springer}
+}
+
 
 @article{hu2018web,
   title={Web-based Multimedia Mapping for Spatial Analysis and Visualization in the Digital Humanities: a Case Study of Language Documentation in Nepal},
@@ -44,11 +78,31 @@
   year={2016}
 }
 
+@inproceedings{garrette2013real,
+  title={Real-world semi-supervised learning of POS-taggers for low-resource languages},
+  author={Garrette, Dan and Mielens, Jason and Baldridge, Jason},
+  booktitle={Proceedings of the 51st Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  volume={1},
+  pages={583--592},
+  year={2013}
+}
+
+@inproceedings{garrette2013learning,
+  title={Learning a part-of-speech tagger from two hours of annotation},
+  author={Garrette, Dan and Baldridge, Jason},
+  booktitle={Proceedings of the 2013 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
+  pages={138--147},
+  year={2013}
+}
+
 
 @article{kaufman2018kratylos,
   title={Kratylos: A tool for sharing interlinearized and lexical data in diverse formats},
   author={Kaufman, Daniel and Finkel, Raphael},
   year={2018},
+  volume={12},
+  pages={124-146},
+  journal={Language Documentation \& Conservation},
   publisher={University of Hawaii Press}
 }
 
